cmake_minimum_required(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

set(STACK_PROTECTOR_SUPPORTED 0 CACHE BOOL "")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fstack-protector")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fstack-protector")

include("${PROJECT_SOURCE_DIR}/LoadExternalDependencies.cmake")

file(GLOB CODE_FILES *.h *.hpp *.cpp)
SET(APP_NAME main)
SET(APP_FILES ${CODE_FILES} )

add_executable(${APP_NAME} ${APP_FILES})
target_include_directories(${APP_NAME} PUBLIC ${sdl_SOURCE_DIR}/include ${sdl_mixer_SOURCE_DIR}/include ${sdl_image_SOURCE_DIR})
target_link_libraries(${APP_NAME} SDL2::SDL2main SDL2::SDL2-static SDL2_image::SDL2_image-static SDL2_mixer::SDL2_mixer-static)

# file(COPY ${PROJECT_SOURCE_DIR}/habib.png DESTINATION ${PROJECT_BINARY_DIR})
# file(COPY ${PROJECT_SOURCE_DIR}/charspriteOne.png DESTINATION ${PROJECT_BINARY_DIR})
# file(COPY ${PROJECT_SOURCE_DIR}/mintman.png DESTINATION ${PROJECT_BINARY_DIR})
# file(COPY ${PROJECT_SOURCE_DIR}/habib.png DESTINATION ${PROJECT_BINARY_DIR})
# file(COPY ${PROJECT_SOURCE_DIR}/habib1.png DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/habib2.png DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/white.png DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/green.png DESTINATION ${PROJECT_BINARY_DIR})
# file(COPY ${PROJECT_SOURCE_DIR}/hitvoice.mp3 DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/playerimg DESTINATION ${PROJECT_BINARY_DIR})

# file(COPY ${PROJECT_SOURCE_DIR}/player2.png DESTINATION ${PROJECT_BINARY_DIR})
# file(COPY ${PROJECT_SOURCE_DIR}/player1wins.png DESTINATION ${PROJECT_BINARY_DIR})

# file(COPY ${PROJECT_SOURCE_DIR}/player1png.png DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/chooseplayerone.jpeg DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/chooseplayertwo.jpeg DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/background1.png DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/background2.png DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/background3.jpeg DESTINATION ${PROJECT_BINARY_DIR})
file(COPY ${PROJECT_SOURCE_DIR}/choosebackground.jpeg DESTINATION ${PROJECT_BINARY_DIR})


file(COPY ${PROJECT_SOURCE_DIR}/hits DESTINATION ${PROJECT_BINARY_DIR})



find_package(SDL2 REQUIRED)
find_package(SDL2_mixer REQUIRED)

target_link_libraries(${APP_NAME}  SDL2::SDL2main  SDL2::mixer)




#file(COPY ${PROJECT_SOURCE_DIR}/pigeon.mp3 DESTINATION ${PROJECT_BINARY_DIR})

